# crashdump

./: CMakeLists.txt  README.md  crashdump.cpp  crashdump.hpp  crashdump_input_icx.json  crashdump_input_spr.json  crashdump_input_sprhbm.json  peci_cpus.hpp  telemetry_input_icx.json  telemetry_input_spr.json  telemetry_input_sprhbm.json  utils.cpp  utils.hpp  utils_dbusplus.cpp  utils_dbusplus.hpp  utils_triage.cpp  utils_triage.hpp
CrashdumpSections/: AddressMap.c  AddressMap.cpp  AddressMap.h  AddressMap.hpp  BigCore.c  BigCore.cpp  BigCore.h  BigCore.hpp  CoreMca.c  CoreMca.cpp  CoreMca.h  CoreMca.hpp  Crashlog.c  MetaData.c  MetaData.cpp  MetaData.h  MetaData.hpp  OemData.c  OemData.cpp  OemData.h  PchCrashlog.c  PchCrashlog.h  PchCrashlogInternal.h  PowerManagement.c  PowerManagement.cpp  PowerManagement.h  PowerManagement.hpp  SqDump.cpp  SqDump.hpp  TorDump.c  TorDump.cpp  TorDump.h  TorDump.hpp  Uncore.c  Uncore.cpp  Uncore.h  Uncore.hpp  UncoreMca.c  UncoreMca.cpp  UncoreMca.h  (+8 more)
docs/: build_instructions.md  changelog.md  dependencies.md
engine/: cmdprocessor.c  cmdprocessor.h  crashdump.h  flow.c  flow.h  inputparser.c  inputparser.h  logger.c  logger.h  logger_internal.h  nvd.c  nvd.h  utils.c  utils.h  validator.c  validator.h
libpeci/: libpeci.c  libpeci.h  peci_cmds.c
tests/: test_main.cpp  test_utils.cpp  test_utils.hpp
tests/CrashdumpSections/: AddressMap_test.cpp  BigCore_test.cpp  CoreMca_test.cpp  Crashlog_test.cpp  MetaData_test.cpp  PchCrashlog_test.cpp  PowerManagement_test.cpp  SqDump_test.cpp  TorDump_test.cpp  UncoreMca_test.cpp  UncoreRegs_test.cpp  Uncore_test.cpp  crashdump_test.cpp  utils_test.cpp
tests/UnitTestFiles/: ut_bigcore.json  ut_cmdprocessor.json  ut_core_mca.json  ut_crashdump_input_spr.json  ut_crashlog.json  ut_mca_cbo.json  ut_mca_core.json  ut_mca_uncore.json  ut_metadata.json  ut_mmio.json  ut_mmio_fail_prereq.json  ut_multiple_sections.json  ut_nvd.json  ut_pm_core.json  ut_pm_dispatcher.json  ut_pm_pci.json  ut_pm_pci_core.json  ut_pm_pll.json  ut_rdiamsr.json  ut_rdiamsr_cha.json  ut_rdtad.json  ut_tor.json  ut_uncore.json  ut_uncore_input_sample_spr.json  ut_uncore_pci.json
tests/acd_verify/: acd_verify.py
tests/acd_verify/lib/: Address_map.py  Big_core.py  Checks.py  Mca.py  Metadata.py  PM_info.py  Postprocessor.py  Preprocessor.py  Processor.py  Section.py  SelfCheck.py  Summary.py  Table.py  Tor.py  Uncore.py
tests/engine/: MaxSize_test.cpp  cmdprocessor_test.cpp  crashdump_test.cpp  flow_test.cpp  inputparser_test.cpp  logger_test.cpp  utils_test.cpp  validator_test.cpp
tests/mock/: fake_peci.hpp  libpeci_mock.hpp  test_crashdump.cpp  test_crashdump.hpp
